Revision history for ocsreports 

2.0 rc2
		* Fix bug on cookies (columns tab)
		* Fix bug on teledeploy workflow. You can delete your fields
		* Fix problem with activation (Bug #704073)
		* add bios type to multi search
		* update language files
		* Fix bug on many browsers on multi search (bug 694939)

2.0 rc1
        * Delete doc of jpgraph and fusionCrartsFree
        * Add graph with jpgraph librarie
        * Fix bug on accountinfo snmp
        * Change LINUX to UNIX/LINUX in package creation page
        * New version of all_soft page
        * Fix warning in html_header.php
        * Add message if directory not exist.
        * Fix bug: use a special name var for msg info in html_header
        * Fix DOCUMENT_REAL_ROOT bug
        * Add IT set management light. Configuration and details of computer are done. Next step: search on these new fields
        * Show directory of 4all_config.txt
        * Add some stats
        * Fix language bug on database
        * Choose your directory for your profils config files, old config file
        * Fix bugs on function_table_html.php
        * New graph for teledeploy speed
        * Add FusionChartsFree for graphs 
        * Add functionnality: UTF8 for new databases
        * Create new database on UTF8 format
        * If database UTF8 format => only ocsbase_new.sql
        * New plugin system: you can now create your own plugins easily	
        * Add .xml to local import
        * Add old page for redistribution servers
        * Delete print option and show all
        * Add avaailibility to see all your subnet and you can blacklist subnet in ipdiscover
        * You can now configure blacklist in /backend/ipdiscover/methode/local.php
        * Rename config.txt for snmp and computer detail
        * Using mysql2_query_secure now
        * Add new option: tabcache => GUI tables cache
        * Reset all tab cache
        * Show SNMP data
        * Add snmp functionnality for a computer or a group