@@ -1,6 +1,8 @@
 Revision history for ocsreports 
 
 2.0 rc2
+		* Fix bug on multi search
+		* Use language files on groups details
 		* Fix bug on cookies (columns tab)
 		* Fix bug on teledeploy workflow. You can delete your fields
 		* Fix problem with activation (Bug #704073)
